--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://annzdne.github.io/portofolio",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "predeploy": "npm run build && npm run export",
-    "deploy": "gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-email/components": "^0.0.7",
@@ -36,7 +32,6 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.3",
-    "gh-pages": "^6.1.1"
+    "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
